--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Tree_Item.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Tree_Item.cshtml
@@ -13,7 +13,7 @@
     }
 
     <div class="node @parentStyle">
-        <span class="name" onclick="LoadDetailsFromList('@cat.Node.Id')">
+        <span class="name" onclick="loadCategoryDetails('@cat.Node.Id')">
             @Html.DisplayFor(m => item.Node.Name)
         </span>
         <span class="info">...</span>
