--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Edit.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Edit.cshtml
@@ -1,44 +1,51 @@
-﻿@model Squirrel.Domain.ViewModels.CategoryEditModel
+﻿@using Squirrel.Utility.FarsiTools
+@model Squirrel.Domain.ViewModels.CategoryEditModel
 
-<h4>ویرایش گروه</h4>
+<div class="topic-row">
+    ویرایش گروه
+</div>
+<div class="divider-blank15"></div>
 
-@Html.Partial("_Message")
-
-@using (Ajax.BeginForm("Edit", "Categories", null, new AjaxOptions { UpdateTargetId = "option_con_2" }, new { id = "cat_details_form" }))
+@using (Ajax.BeginForm("Edit", "Categories", null, 
+    new AjaxOptions { OnFailure = "onEditCategoryError", OnSuccess = "onEditCategorySuccess" }, 
+    new { id = "cat_edit_form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
 
-    <p class="form-group">
+    <div class="form-row">
         @Html.LabelFor(m => m.Name)
-        <br />
-        @Html.TextBoxFor(m => m.Name)
-        @Html.ValidationMessageFor(m => m.Name)
-    </p>
-
-    <p class="form-group">
-        @Html.LabelFor(m => m.Parent)
-        <br />
-        @Html.TextBoxFor(m => m.Parent, new { id = "parent_edit" })
-        @Html.ValidationMessageFor(m => m.Parent)
-    </p>
-
-    <p class="form-group">
+        @Html.TextBoxFor(m => m.Name, new { @class = "textbox small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Name)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
+        <label for="parent_edit">@Html.DisplayNameFor(m => m.Parent)</label>
+        @Html.TextBoxFor(m => m.Parent, new { @class = "textbox small", @id = "parent_edit" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Parent)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.Description)
-        <br />
-        @Html.TextAreaFor(m => m.Description)
-        @Html.ValidationMessageFor(m => m.Description)
-    </p>
-
-    <p>
-        <button type="submit" class="btn btn-default">ویرایش</button>
-        <button type="button" class="btn btn-default" onclick="$('#option_con_2').html('');">انصراف</button>
-    </p>
+        @Html.TextAreaFor(m => m.Description, new { @class = "textarea small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Description)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div>
+        <button type="submit" class="button small submit">ویرایش</button>
+        <a class="button small" onclick="restoreSecondryContent()">انصراف</a>
+    </div>
 }
 
 <script type="text/javascript">
     $(function () {
-        $.validator.unobtrusive.parse("#cat_details_form");
+        $.validator.unobtrusive.parse("#cat_edit_form");
 
         $("#parent_edit").autocomplete({
             source: function (request, response) {
@@ -54,7 +61,9 @@
                             };
                         }));
                     },
-                    error: function () { alert('خطا'); }
+                    error: function () {
+                        GlobalMessage(GetNowTimeFa(), 'خطا در یافتن گروه', 'error');
+                    }
                 });
             },
             minLength: 2,
