--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Add.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Add.cshtml
@@ -1,51 +1,61 @@
 ﻿@using Squirrel.Utility.Helpers
 @model Squirrel.Domain.ViewModels.FileAddModel
 
-@Html.Partial("_Message")
-
+<div class="topic-row">
+    افزودن فایل
+</div>
+<div class="divider-blank15"></div>
 <div id="upload_file_con">
     @Html.Partial("Upload")
 </div>
 
-
-@using (Ajax.BeginForm("Add", "Files", null, new AjaxOptions { UpdateTargetId = "option_con_1" }, new { id = "file_ops_form" }))
+@using (Ajax.BeginForm("Add", "Files", null,
+    new AjaxOptions { OnFailure = "onAddFileError", OnSuccess = "onAddFileSuccess" },
+    new { id = "file_add_form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.FileAddress)
-    <p class="form-group">
-        @Html.ValidationMessageFor(m => m.FileAddress)
-    </p>
 
-    <p class="form-group">
+    <div class="form-row">
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.FileAddress)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.Name)
-        <br />
-        @Html.TextBoxFor(m => m.Name)
-        @Html.ValidationMessageFor(m => m.Name)
-    </p>
-
-    <p class="form-group">
+        @Html.TextBoxFor(m => m.Name, new { @class = "textbox small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Name)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.Category)
-        <br />
-        @Html.TextBoxFor(m => m.Category, new {id = "category_add"})
-        @Html.ValidationMessageFor(m => m.Category)
-    </p>
-
-    <p class="form-group">
+        @Html.TextBoxFor(m => m.Category, new { @class = "textbox small", @id = "category_add" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Category)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.IsPublic)
-        <br />
-        @Html.DropDownListFor(m => m.IsPublic, SelectListExtensions.SelectListOfBool("عمومی", "اختصاصی"))
-        @Html.ValidationMessageFor(m => m.IsPublic)
-    </p>
-
-    <p>
-        <button type="submit" class="btn btn-default">افزودن</button>
-    </p>
+        @Html.DropDownListFor(m => m.IsPublic, SelectListExtensions.SelectListOfBool("عمومی", "اختصاصی"), new { @class = "select small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.IsPublic)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div>
+        <button type="submit" class="button small submit">افزودن</button>
+        <a class="button small" onclick="hideAndClearSecondryContent()">انصراف</a>
+    </div>
 }
 
 <script type="text/javascript">
-    $(function() {
-        $.validator.unobtrusive.parse("#file_ops_form");
-        $("#file_ops_form").data("validator").settings.ignore = "";
+    $(function () {
+        $.validator.unobtrusive.parse("#file_add_form");
+        $("#file_add_form").data("validator").settings.ignore = "";
 
         $('#FileAddress').bind('change', function () {
             $(this).valid();
