--- a/Squirrel/Squirrel.Web/Content/themes/vone/admin.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/admin.css
@@ -267,6 +267,71 @@ html a:focus {
 .table.vline > tbody > tr > td:first-child {
   border-right-width: 0;
 }
+.table.hover-row > tbody > tr {
+  cursor: pointer;
+  -moz-transition: background-color linear 0.1s;
+  -o-transition: background-color linear 0.1s;
+  -webkit-transition: background-color linear 0.1s;
+  transition: background-color linear 0.1s;
+}
+.table.hover-row > tbody > tr:hover {
+  background-color: #fffabc;
+}
+.filebox {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  padding: 5px;
+  border: 1px solid #e1e1e1;
+  border-radius: 3px;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+.filebox .chooser {
+  display: block;
+  float: right;
+  font-size: .6em;
+  line-height: 32px;
+  background-color: #eeeeee;
+  padding: 0 10px;
+  margin-left: 10px;
+  color: #959595;
+  border-radius: 3px;
+}
+.filebox .val {
+  display: block;
+  font-size: .65em;
+  line-height: 32px;
+  height: 32px;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  overflow: hidden;
+  color: #7d7d7d;
+}
+.filebox input[type="file"] {
+  overflow: hidden;
+  height: 0;
+  width: 0;
+  border: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  opacity: 0;
+}
+.filebox.small {
+  padding: 3px;
+}
+.filebox.small .chooser {
+  line-height: 24px;
+  height: 24px;
+}
+.filebox.small .val {
+  line-height: 24px;
+}
+.filebox:focus {
+  outline: none;
+  border-color: #cccccc;
+}
 .divider-blank10 {
   display: block;
   width: 100%;
@@ -541,6 +606,57 @@ html a:focus {
 }
 .message-box.success .msg-text {
   color: #636363;
+}
+.progressbar-con {
+  position: relative;
+  padding-left: 22px;
+  padding-top: 7px;
+}
+.progressbar-con .glyphbox {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  right: auto;
+  bottom: auto;
+  left: 0;
+  font-size: 22px;
+  color: #959595;
+}
+.progressbar-con .glyphbox.success {
+  font-size: 18px;
+  line-height: 22px;
+  cursor: default;
+  color: #47cfad;
+  display: none;
+}
+.progressbar-con .progressbar {
+  background-color: #ffffff;
+  padding: 2px;
+  border-radius: 3px;
+  border: 1px solid #e1e1e1;
+}
+.progressbar-con .progressbar .loader-con {
+  overflow: hidden;
+}
+.progressbar-con .progressbar .loader-con .loader {
+  width: 0;
+  height: 3px;
+  background-color: #47cfad;
+  -moz-transition: width linear 0.1s;
+  -o-transition: width linear 0.1s;
+  -webkit-transition: width linear 0.1s;
+  transition: width linear 0.1s;
+}
+.progressbar-con .percent {
+  font-size: .7em;
+  line-height: 20px;
+  text-align: left;
+}
+.progressbar-con.success .glyphbox {
+  display: none;
+}
+.progressbar-con.success .glyphbox.success {
+  display: block;
 }
 ul.ui-menu {
   border: 1px solid #cccccc;
@@ -1004,6 +1120,17 @@ ul.ui-menu li.ui-menu-item.ui-state-focus {
 }
 .secondry-content #secondry_content .categories-tree .childs {
   padding-right: 20px;
+}
+.secondry-content #secondry_content .avatar-row {
+  text-align: center;
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  border-radius: 52px;
+  border: 4px solid #ffffff;
+}
+.secondry-content #secondry_content .avatar-row img {
+  height: 52px;
 }
 .secondry-content #secondry_content #publishdate_edit_con {
   display: none;
